test/fail/void.min
program
    function void test do 123;
start
    if test then
        "what?" !
    fi
end
